deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: Always
        ports:
         - name: http-port
           containerPort: 80
        volumeMounts:
        - name: pihole-nfs-etc-volume
          mountPath: "/etc/pihole"
        - name: pihole-nfs-dnsmasq-volume
          mountPath: "/etc/dnsmasq.d"
      volumes:
      - name: pihole-nfs-etc-volume
        persistentVolumeClaim:
          claimName: pihole-etc-pvc
      - name: pihole-nfs-dnsmasq-volume
        persistentVolumeClaim:
          claimName: pihole-dnsmasq-pvc
