ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pihole
  name: pihole
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rewrite-target: /admin/
    #    kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: pihole
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: pihole-svc
            port:
              number: 8001
  - host: pihole.local
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: pihole-svc
            port:
              number: 8001
